// contains all the models

syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

message Item {
    string url = 1;
}

message OrderItem {
    string name = 1;
    string qty = 2;
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    bool is_verified = 5;
    string verification_code = 6;
    string role = 7;
    google.protobuf.Timestamp created_at = 8;
}

message Store {
    string id = 1; 
    string name = 2;  
    google.protobuf.Timestamp created_at = 3;  
    repeated Billboard billboards = 4;  
    repeated Category categories = 5;   
    repeated Size sizes = 6; 
    repeated Color colors = 7;
    repeated Order orders = 8; 
    repeated Product products = 9;
}

message Billboard {
    string id = 1;
    string label = 2;
    string image_url = 3;
    string store_id = 4;
    Store store = 5;
    repeated Category categories = 6;
    google.protobuf.Timestamp created_at = 7;
}

message Category {
    string id = 1;
    string name = 2;
    string store_id = 3;
    string billboard_id = 4;
    Billboard billboard = 5;
    Store store = 6;
    google.protobuf.Timestamp created_at = 7;
}

message Size {
    string id = 1;
    Store store = 2;
    string name = 3;
    string value = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Color {
    string id = 1;
    Store store = 2;
    string name = 3;
    string value = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
    bool is_featured = 4;
    bool is_archived = 5;
    string description = 6;
    repeated Item images = 7;
    google.protobuf.Timestamp created_at = 8;
}

message ProductResponse {
    string id = 1;
    string store_id = 2;
    Store store = 3;
    string category_id = 4;
    Category category = 5;
    string name = 6;
    string description = 7;
    float price = 8;
    bool is_featured = 9;
    bool is_archived = 10;
    repeated Item images = 11;
    string size_id = 12; 
    Size size = 13;
    string color_id = 14;
    Color color = 15;
    google.protobuf.Timestamp created_at = 16;
}

message Order {
    string id = 1;  
    repeated OrderItem order_items = 2;  
    bool order_is_paid = 3;  
    string order_phone = 4;  
    string order_address = 5;  
    google.protobuf.Timestamp order_created_at = 6;  
    google.protobuf.Timestamp order_updated_at = 7; 
}